Fixed tooltip overlaping in search

--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -15,6 +15,7 @@
 		border: none;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
+		z-index: 1;
 		// box-shadow: 2px 2px 5px 0 rgba(38, 38, 38, 0.3);
 
 
